SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy, klindsay
Tag Date:    9 July 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130709
Tag Summary: Update to cfc fix implemented on Jan 28, 2013... that fix did not
             handle branch runs correctly (based iinit_cfc_option on STARTDATE
             rather than REFDATE)

Files Modified:
M            48822   bld/build-namelist
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    21 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130521
Tag Summary: Another partial_bottom_cell bugfix: diagnostic output was computed
             incorrectly with partial bottom cells turned on.

Files Modified:
M            47358   source/advection.F90
M            47358   source/horizontal_mix.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    17 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130517
Tag Summary: Bugfix: split loops led to bad values of hfac_[tu] with partial
             bottom cells turned on.

Files Modified:
M            47278   source/vertical_mix.F90
===============================================================================
Tag Creator: mlevy
Developers:  jedwards
Tag Date:    15 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130515
Tag Summary: Bugfix: test on edison was giving "variable used without being
             defined" error relating to dz_loc.

Files Modified:
M            47175   source/ecosys_mod.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    01 May 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130501
Tag Summary: Updating a namelist variable default value.

Files Modified:
M            46612   source/ecosys_parms.F90