@@ -2,6 +2,17 @@ SVN $Id$
 SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
+Developers:  santos
+Tag Date:    9 July 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130709a
+Tag Summary: Three small changes to allow POP to build with intel's "-check
+             bounds" flag (checking for out of bounds memory access)
+
+Files Modified:
+M            48833   source/vmix_kpp.F90
+M            48833   source/hmix_gm.F90
+===============================================================================
+Tag Creator: mlevy
 Developers:  mlevy, klindsay
 Tag Date:    9 July 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130709
